--- a/Controller/src/main/resources/templates/admin/admin-customize-user-static.html
+++ b/Controller/src/main/resources/templates/admin/admin-customize-user-static.html
@@ -75,11 +75,8 @@
                             </div>
                             <div class="">
                                 <label>Role</label>
-                                <select class="form-control form-control-one-line w-25" name="dropdown-test"  >
-                                   <option th:value="1" >Admin</option>
-                                   <option th:value="2" >User</option>
-                                  
-                                </select>
+                                <input type="text" class="form-control bg-color-two" placeholder="Admin" >
+                              
                             </div>
                         </div>
 
