change style on content  detail

--- a/Controller/src/main/resources/templates/clients/contentDetail.html
+++ b/Controller/src/main/resources/templates/clients/contentDetail.html
@@ -73,9 +73,9 @@
                         <div class="col-2 col-sm-2 col-md-1 col-lg-1 pl-0"
                             style="  padding-left: 0; text-align: right; margin-bottom: 23px;">
                             <!-- <img src="" alt=""> -->
-                            <img class="img-fluid rounded-circle z-depth-2 myButton point"
-                                style="width: 80px; min-width: 40px;" alt="100x100"
-                                src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg"
+                            <img class=" rounded-circle z-depth-2 myButton point"
+                                style="width: 80px; width: 50px; height: 50px;" alt="100x100"
+                                src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
                                 data-holder-rendered="true">
 
                         </div>
@@ -196,8 +196,8 @@
                     <div class="row" style="    margin-bottom: 2%;">
                         <div class="col-2 col-sm-2 col-md-1 col-lg-1 pl-0" style=" text-align: right;">
                             <!-- <img src="" alt=""> -->
-                            <img class="img-fluid rounded-circle z-depth-2" style="width: 80px; min-width: 40px;"
-                                alt="100x100" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg"
+                            <img class=" rounded-circle z-depth-2" style="width: 80px; width: 50px; height: 50px;"
+                                alt="100x100" src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
                                 data-holder-rendered="true">
 
                         </div>
@@ -214,9 +214,9 @@
                         <div class="ml-3 mr-0 container-fluid">
                             <div class="row" style=" margin-left: 2%;">
                                 <div class="col-2 col-sm-2 col-md-1  pr-0"> <img
-                                        class="img-fluid rounded-circle z-depth-2"
-                                        style="width: 80px; min-width: 40px; float: right;" alt="100x100"
-                                        src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg"
+                                        class=" rounded-circle z-depth-2"
+                                        style="width: 80px; width: 50px; height: 50px; float: right;" alt="100x100"
+                                        src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
                                         data-holder-rendered="true">
                                 </div>
                                 <div class="col-10 col-sm-10 col-md-11">
@@ -235,9 +235,9 @@
                             </div>
                             <div class="row" style=" margin-left: 2%;">
                                 <div class="col-2 col-sm-2 col-md-1  pr-0">
-                                    <img class="img-fluid rounded-circle z-depth-2"
-                                        style=" float: right;width: 80px; min-width: 40px;" alt="100x100"
-                                        src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg"
+                                    <img class=" rounded-circle z-depth-2"
+                                        style=" float: right;width: 80px; width: 50px; height: 50px;" alt="100x100"
+                                        src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
                                         data-holder-rendered="true">
                                 </div>
                                 <div class="col-10 col-sm-10 col-md-11">
@@ -256,9 +256,9 @@
                             </div>
                             <div class="row" style=" margin-left: 2%;">
                                 <div class="col-2 col-sm-2 col-md-1  pr-0"> <img
-                                        class="img-fluid rounded-circle z-depth-2"
-                                        style="float: right;width: 80px; min-width: 40px;" alt="100x100"
-                                        src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg"
+                                        class=" rounded-circle z-depth-2"
+                                        style="float: right;width: 80px; width: 50px; height: 50px;" alt="100x100"
+                                        src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg"
                                         data-holder-rendered="true">
                                 </div>
                                 <div class="col-10 col-sm-10 col-md-11">
@@ -301,7 +301,7 @@
                 <div class="row">
                     <div class="col-2 pl-0 pr-0">
                         <img class="img-fluid z-depth-2" style="width: 200px;"
-                            src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" data-holder-rendered="true">
+                            src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg" data-holder-rendered="true">
                     </div>
                     <div class="col-10">
                         <div class="container-fluid">
@@ -330,7 +330,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-2 pl-0 pr-0"> <img class="img-fluid z-depth-2"
-                            src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" data-holder-rendered="true">
+                            src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg" data-holder-rendered="true">
                     </div>
                     <div class="col-10">
                         <div class="container-fluid">
@@ -359,7 +359,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-2 pl-0 pr-0"> <img class="img-fluid z-depth-2"
-                            src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" data-holder-rendered="true">
+                            src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg" data-holder-rendered="true">
                     </div>
                     <div class="col-10">
                         <div class="container-fluid">
@@ -399,7 +399,7 @@
                     inline_style: 'max-width: none;',
                     full_visibility_duration:  2000,
                     position: maTooltip.POSITION.BOTTOM,
-                    static_message: '<div style="background-color: white; color: black; border-radius: inherit;"><div>  <img class="img-fluid rounded-circle z-depth-2" style="width: 80px; min-width: 40px;" alt="100x100" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" data-holder-rendered="true"></div><h3>Hum Chamroeun</h3><p>From Takeo</p><p>I am so happy</p><hr><div style="height: 32px;border-radius: inherit;background-color: white; color: black;"><a href="" style="margin-left: 20px;margin-right: 20px ">Favorite Category</a><a style="margin-left: 20px;margin-right: 20px " href="">Education</a><a href="" style="margin-left: 20px;margin-right: 20px ">Technology</a></div></div>'
+                    static_message: '<div style="background-color: white; color: black; border-radius: inherit;"><div>  <img class=" rounded-circle z-depth-2" style="width: 80px; width: 50px; height: 50px;" alt="100x100" src="https://cdn.mos.cms.futurecdn.net/xgc36EhSDW9Zu3RGLCfLEg-970-80.jpg" data-holder-rendered="true"></div><h3>Hum Chamroeun</h3><p>From Takeo</p><p>I am so happy</p><hr><div style="height: 32px;border-radius: inherit;background-color: white; color: black;"><a href="" style="margin-left: 20px;margin-right: 20px ">Favorite Category</a><a style="margin-left: 20px;margin-right: 20px " href="">Education</a><a href="" style="margin-left: 20px;margin-right: 20px ">Technology</a></div></div>'
                 });
 
 
