--- a/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
+++ b/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
@@ -8,29 +8,25 @@
 
     @media (max-width: 2200px) {
         .head-size{
-            font-size: xx-large;
+            font-size:30px;
         }
     }
     @media (max-width: 1024px) {
         .head-size{
-            font-size: x-large;
-        }
+            font-size:30px;        }
     }
     @media (max-width: 992px) {
         .head-size{
-            font-size: x-large;
-        }
+            font-size:30px;        }
     }
 
     @media (max-width: 768px) {
         .head-size{
-            font-size: large;
-        }
+            font-size:30px;      }
     }
     @media (max-width: 480px) {
         .head-size{
-            font-size: medium;
-        }
+            font-size:30px;       }
     }
 
 
