--- a/Controller/src/main/resources/templates/footer/__footer.html
+++ b/Controller/src/main/resources/templates/footer/__footer.html
@@ -10,10 +10,9 @@
                 <div class="col-4 col-md-3 pt-3 pr-0 pl"><span class="point"><h6 >Users Guide</h6></span>  </div>
                 <div class="col-12 col-md-3 mt-md-1 mt-3 d-flex justify-content-around
                 " style="text-align: center;">
-                    <img style="width: 34px;opacity: 0.2;" class="point" src="/img/facebook.svg" alt="">
-                    <img style="width: 38px;opacity: 0.2;" class="point" src="/img/twitter.png" alt="">
-                    <img style="width: 40px;opacity: 0.2; margin-top: 2px;" class="point" src="/img/instagram.png" alt="">
-                </div>
+                    <img style="width: 36px;opacity: 0.2;" class="point" src="/img/facebook.svg" alt="">
+                    <img style="width: 42px;opacity: 0.2;" class="point" src="/img/twitter.png" alt="">
+                    <img style="width: 36px;opacity: 0.2; margin-top: 2px;" class="point" src="../icon/instagram.svg">
 
             </div>
         </div>
