--- a/Controller/src/main/resources/templates/loginPage.html
+++ b/Controller/src/main/resources/templates/loginPage.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="container-fluid py-0">
+<div class="container-fluid py-0 " style="padding-left: 0%;">
     <div class="row">
         <!-- <div class=" col-6 col-lg-6 d-none d-sm-block "> -->
             <div class="col-sm col-6 col-lg-6 d-none d-sm-block d-none d-sm-block d-sm-none d-md-block">
@@ -25,9 +25,9 @@
                 <p class="line-m" style="line-height: 100%; font-size: small;">Please login or sign up for an account</p>
 
                 <div style=" text-align: start; margin-bottom: 9%; margin-top: 10%;">
-                    <span style="text-align: left; margin-bottom: 0px !important;font-size: small">User Name</span>
+                    <span style="text-align: left; margin-bottom: 0px !important;font-size: small">Email</span>
                     <input style="text-align: left; margin-top: 2px;" type="text" class="t-span form-control"
-                           placeholder="User Name">
+                           placeholder="ABC@gmail.com">
                 </div>
                 <div style="text-align: start;">
                     <span class="t-span" style="margin-bottom: 0px; font-size: small">Password</span>
