--- a/Controller/src/main/resources/templates/sign-up.html
+++ b/Controller/src/main/resources/templates/sign-up.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container-fluid py-0">
+    <div class="container-fluid py-0" style="padding-left: 0%;">
         <div class="row">
             <div class="col-sm col-6 col-lg-6 d-none d-sm-block d-none d-sm-block d-sm-none d-md-block">
                 <img class="vh-100 w-100" src="/img/loginPic.jpg" alt="">
