--- a/Controller/src/main/resources/templates/loginPage.html
+++ b/Controller/src/main/resources/templates/loginPage.html
@@ -25,7 +25,7 @@
                 <p class="line-m" style="line-height: 100%; font-size: small;">Please login or sign up for an account</p>
 
                 <div style=" text-align: start; margin-bottom: 9%; margin-top: 10%;">
-                    <span style="text-align: left; margin-bottom: 0px !important;font-size: small">Email</span>
+                    <span style="text-align: left; margin-bottom: 0px !important;font-size: small">Username</span>
                     <input style="text-align: left; margin-top: 2px;" type="text" class="t-span form-control"
                            placeholder="ABC@gmail.com">
                 </div>
