first version reviewing MASTER

--- a/Controller/src/main/resources/templates/navbar/__navbar_admin_css.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar_admin_css.html
@@ -11,6 +11,7 @@ li.nav-item {
 }
 .navbar-nav >li.nav-item:hover ,.left-side-menu-ul>li:hover{
     background-color: #E5EAED;
+    cursor: pointer;
 }
 li.nav-link>h5{
     width: 5cm;
