--- a/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
+++ b/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
@@ -1,61 +1,81 @@
 <link rel="stylesheet" th:href="@{/node_module/bootstrap-4.4.1/dist/css/bootstrap.min.css}">
 
 <style>
-
     /*
         for title
      */
 
     @media (max-width: 2200px) {
-        .head-size{
-            font-size:30px;
+        .head-size {
+            font-size: 30px;
         }
     }
+
     @media (max-width: 1024px) {
-        .head-size{
-            font-size:30px;        }
+        .head-size {
+            font-size: 30px;
+        }
     }
+
     @media (max-width: 992px) {
-        .head-size{
-            font-size:30px;        }
+        .head-size {
+            font-size: 30px;
+        }
     }
 
     @media (max-width: 768px) {
-        .head-size{
-            font-size:30px;      }
-    }
-    @media (max-width: 480px) {
-        .head-size{
-            font-size:30px;       }
+        .head-size {
+            font-size: 30px;
+        }
     }
 
+    @media (max-width: 480px) {
+        .head-size {
+            font-size: 30px;
+        }
+    }
+
+    @media only screen and (max-width: 1024px) {
+        .btn-send {
+            display: unset;
+        }
+    }
+
+    @media only screen and (min-width: 1024px) {
+        .btn-send {
+            display: none;
+        }
+    }
 
     /*
       for name and date
     */
     @media (max-width: 2200px) {
-        .pf-size{
+        .pf-size {
             font-size: medium;
         }
     }
+
     @media (max-width: 1024px) {
-        .pf-size{
+        .pf-size {
             font-size: small;
         }
     }
+
     @media (max-width: 992px) {
-        .pf-size{
-            font-size:smaller;
+        .pf-size {
+            font-size: smaller;
         }
     }
 
     @media (max-width: 768px) {
-        .pf-size{
+        .pf-size {
             font-size: x-small;
         }
     }
+
     @media (max-width: 480px) {
-        .pf-size{
+        .pf-size {
             font-size: xx-small;
         }
     }
@@ -77,6 +97,7 @@
         font-size: 16px;
         color: #FFF;
     }
+
     .loginBtn:before {
         content: "";
         box-sizing: border-box;
@@ -86,11 +107,13 @@
         width: 34px;
         height: 100%;
     }
+
     .loginBtn:focus {
         outline: none;
     }
+
     .loginBtn:active {
-        box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+        box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
     }
 
     /* Google */
@@ -98,12 +121,15 @@
         /*font-family: "Roboto", Roboto, arial, sans-serif;*/
         background: #DD4B39;
     }
+
     .loginBtn--google:before {
         border-right: #BB3F30 1px solid;
         background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
     }
+
     .loginBtn--google:hover,
     .loginBtn--google:focus {
         background: #E74B37;
     }
+
 </style>
