--- a/Controller/src/main/resources/templates/clients/contentDetail.html
+++ b/Controller/src/main/resources/templates/clients/contentDetail.html
@@ -134,7 +134,7 @@
                             <!-- </div>  -->
 
                         </div>
-                        <div class="col-1 pl-0 my-auto"> <span class="pb-3">309</span></div>
+                        <div class="col-1 pl-0 my-auto"> <span class="pb-3" th:text=${like}></span></div>
                         <div class="col-10 ">
                             <div
                                 style="padding: 6px;display: inline;border-radius: 4px;  background-color: rgb(168, 167, 167)">
